# SeqMaker

./: CMakeLists.txt  CMakePresets.json
include/: NGram.hpp  Protection.hpp  Registers.hpp  SeqMaker.hpp  SeqUnit.hpp  SeqUnitMnemonic.hpp  SeqUnitOpcode.hpp  SeqUnitOriginal.hpp
shared/: SeqMaker.h
shared/types/: Registers.h  SeqMaker.h  SeqUnit.h
src/: DllMain.cpp  Main.cpp  SeqMaker.c  SeqMaker.cpp  SeqUnit.cpp  SeqUnitMnemonic.cpp  SeqUnitOpcode.cpp  SeqUnitOriginal.cpp
